Still trying to fix landing content not showing on mobile

--- a/style.scss
+++ b/style.scss
@@ -175,7 +175,7 @@ img {
   top: 50%;
   text-align: center;
   transform: translateY(-50%);
-  z-index: -1;
+  z-index: 2;
 }
 
 section {
